# ComfyUI_ControlFreak

./: README.md  pyproject.toml
.github/workflows/: publish.yml
js/: index.js  nodeStateMapping.js  nodeStateMappingEditor.js  nodeStateMappingEditorLoader.js
js/core/: workflowIntegration.js
js/features/: nodeStateMapping.js
js/ui/: contextMenu.js  widgetHighlighter.js
js/ui/styles/: index.js
